# sdlos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pre_cmake.sh  readme.adoc
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
assets/shaders/glsl/: clouds.frag.glsl  desktop.frag.glsl  desktop.vert.glsl  ui_rect.frag.glsl  ui_rect.vert.glsl  ui_sdf.frag.glsl  ui_text.frag.glsl
assets/shaders/msl/: clima_sky.frag.metal  clouds.frag.metal  desktop.frag.metal  desktop.vert.metal  pbr_mesh.frag.metal  pbr_mesh.vert.metal  ui_rect.frag.metal  ui_rect.vert.metal  ui_sdf.frag.metal  ui_text.frag.metal
assets/shaders/wgsl/: clouds.frag.wgsl  desktop.frag.wgsl  desktop.vert.wgsl  ui_rect.frag.wgsl  ui_rect.vert.wgsl  ui_sdf.frag.wgsl  ui_text.frag.wgsl
assets/web/: shell.html
cmake/: sdlos_functions.cmake  sdlos_platform.cmake  sdlos_status.cmake  sdlos_tests.cmake  sdlos_tooling.cmake
config/: config-ios-xcode.sh  config-web.sh
docs/: summary.adoc
examples/apps/automat/: app.jade  automat.cc  automat.cmake  automat.css  scene.css
examples/apps/calc/: calc.cmake  calc.jade  calculator.cmake  calculator.jade  calculator_behavior.cxx  readme.adoc
examples/apps/cam/: cam.cmake  cam.jade  cam_behavior.cc  cam_behavior.cxx  styles.css
examples/apps/clima/: clima.cc  clima.cmake  clima.css  clima.jade  readme.adoc
examples/apps/clima/data/fonts/: README.md
examples/apps/flatshader/: flatshader.cmake  flatshader.css  flatshader.jade  flatshader_behavior.cc
examples/apps/flatshader/data/models/: .gitignore
examples/apps/jadearea/: jadearea.cc  jadearea.cmake  jadearea.cxx  jadearea.jade  readme.adoc
examples/apps/pug/: pug.cmake  pug.css  pug.jade  pug_behavior.cc
examples/apps/pug/data/: pipeline.css  pipeline.pug
examples/apps/shade/: readme.adoc  shade.cmake  shade.css  shade.jade  shade_behavior.cc  shade_behavior.cxx
examples/apps/shader/: shader.cmake  shader.css  shader.jade  shader_behavior.cc
examples/apps/styleguide/: scene.css  styleguide.cc  styleguide.cmake  styleguide.css  styleguide.cxx  styleguide.jade  styleguide_.cc
examples/apps/styleguide/data/: pipeline.pug
examples/apps/vfs/: vfs.cmake  vfs.css  vfs.jade  vfs_behavior.cc  vfs_behavior.cxx
examples/apps/viz/: viz.cmake  viz.css  viz.jade  viz_behavior.cc  viz_behavior.cxx
examples/apps/viz/data/: .gitignore  pipeline.css  pipeline.pug
src/: app.cc  app.cxx  app.hh  app_catalog.cxx  app_catalog.hh  application_manager.cxx  application_manager.hh  css_loader.cc  css_loader.cxx  css_loader.h  css_loader.hh  desktop.cc  desktop.cxx  desktop.h  desktop.hh  event_bus.cc  event_bus.cxx  event_bus.h  event_bus.hh  hit_test.cc  hit_test.cxx  hit_test.h  hit_test.hh  i_event_bus.hh  i_file_system.hh  i_window.hh  image_cache.cc  image_cache.cxx  image_cache.h  image_cache.hh  inotification.h  io.cc  io.h  jade_host.cc  jade_host.cxx  main.cc  main.cxx  node_events.cc  node_events.cxx  node_events.h  (+37 more)
src/audio/: audio_player.cc  audio_player.h  sfx_player.cc  sfx_player.h
src/core/: animated.h  animated.hh  easing.h  easing.hh  frame_arena.h  frame_arena.hh  parse.h  rgba.h  signal.h  slot_map.hh  small_flat_map.h  small_flat_map.hh  small_vector.h  small_vector.hh
src/debug/: layout_debug.cc  layout_debug.cxx  layout_debug.h  layout_debug.hh
src/frame_graph/: compiled_graph.cc  compiled_graph.cxx  compiled_graph.h  compiled_graph.hh  frame_graph.cc  frame_graph.cxx  frame_graph.h  frame_graph.hh  pug_parser.cc  pug_parser.cxx  pug_parser.h  pug_parser.hh  resource_pool.h  resource_pool.hh
src/gltf/: gltf_scene.cc  gltf_scene.cxx  gltf_scene.h  gltf_scene.hh  math3d.h  math3d.hh
src/jade/: jade_lexer.cc  jade_lexer.cxx  jade_lexer.h  jade_lexer.hh  jade_parser.cc  jade_parser.cxx  jade_parser.h  jade_parser.hh  jade_token.hh
src/vfs/: local_mount.cc  local_mount.cxx  local_mount.h  local_mount.hh  mem_mount.cc  mem_mount.cxx  mem_mount.h  mem_mount.hh  mount.h  mount.hh  union_mount.cc  union_mount.cxx  union_mount.h  union_mount.hh  uri.h  uri.hh  vfs.cc  vfs.cxx  vfs.h  vfs.hh
src/widgets/: grid_panel.cc  grid_panel.h  input_box.cxx  input_box.hh  input_text_box.cc  input_text_box.cxx  input_text_box.h  input_text_box.hh  number_dragger.cc  number_dragger.cxx  number_dragger.h  number_dragger.hh  range_slider.cc  range_slider.cxx  range_slider.h  range_slider.hh  select_box.cc  select_box.cxx  select_box.h  select_box.hh  widget.h  widget.hh
tests/: test_frame_graph.cc  test_frame_graph.cxx  test_jade.cc  test_jade.cxx  test_render_tree.cc  test_style_extras.cc
tooling/: pyproject.toml  readme.adoc  test_docblock_idempotency.py
tooling/config/: app.yaml  config-android.sh  config-ios-xcode.sh  config-web.sh
tooling/src/sdlos/: __init__.py  cli.py
tooling/src/sdlos/assets/: __init__.py  gitignore.py  pipeline_templates.py  png.py  shaders.py
tooling/src/sdlos/commands/: __init__.py  analyze.py  build.py  create.py  interactive.py  mesh.py  pipeline.py  run.py
tooling/src/sdlos/config/: __init__.py  schema.py
tooling/src/sdlos/core/: __init__.py  cmake.py  console.py  fs.py  naming.py  pipeline_viz.py
tooling/src/sdlos/data/: knowledge_packs.yaml
tooling/src/sdlos/features/: __init__.py  bundler.py  docblocks.py  metrics.py  post_process.py  sanitize.py  sca.py  tidy.py  updater.py
tooling/src/sdlos/templates/: __init__.py  renderer.py
tooling/src/sdlos/templates/camera/: behavior_cc.j2  behavior_cxx.j2  css.j2  jade.j2
tooling/src/sdlos/templates/minimal/: behavior_cxx.j2  css.j2  jade.j2
tooling/src/sdlos/templates/pug/: behavior_cc.j2  css.j2  jade.j2
tooling/src/sdlos/templates/scene3d/: behavior_cxx.j2  css.j2  jade.j2
tooling/src/sdlos/templates/shader/: behavior_cc.j2  behavior_cxx.j2  css.j2  jade.j2
tooling/src/sdlos/templates/vfs/: behavior_cxx.j2  css.j2  jade.j2
tooling/tests/: test_assets.py  test_cmake.py  test_create.py  test_fs.py  test_mesh.py  test_naming.py  test_run.py  test_templates.py
(+110 files in other folders)
